openshift/Deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: inventory-service
  name: inventory-service
spec:
  replicas: 1
  selector:
    app: inventory-service
    deploymentconfig: inventory-service
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: inventory-service
        deploymentconfig: inventory-service
    spec:
      containers:
      - image: empirechaotix/inventory-service:0.1.0
        imagePullPolicy: Always
        name: inventory-service
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
