openshift/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    release: istio
  name: inventory-service-istio-ingressgateway
  namespace: istio-system
spec:
  host: inventory-service.192.168.99.109.nip.io
  port:
    targetPort: 80
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
